tests/paczka1/fuzzy1/55561651.err
Error in line 4: ZPwo1b5z A996 39,8
Error in line 5: ZPwo1b5z S690 84,9
Error in line 9: 3E14j3 A996 51,0
Error in line 18: 2kQ S22 W62,5
Error in line 14: w4RA A216 99,6
Error in line 24: rTl5WSXEUNb A996 -1,5
Error in line 20: ZPwo1b5z S690 10,0
Error in line 22: ugJSg3Qtt A996 58,7
Error in line 11: 2kQ S22 92,5
Error in line 36: ugJSg3Qtt A996 29,8
